--- a/smerdyakov.html
+++ b/smerdyakov.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1 style= "color: #ff0000">SMERDYAKOV.</h1>
-      <img src="smerdyakov.jpg" alt="Smerdyakov">
+      <img src="goya_saturn.jpeg" alt="Smerdyakov">
       <p style= "text-align: right"> Smerdyakov is presented as Goya's <i> Saturn Devouring his Son. </i> This highly disturbing image is hard to look at directly. In this way, Smerdyakov's own humanity is disgusting to the Karamazovs around him, and often to the reader. The Saturn-figure, driven by lust or hunger or hatred, insatiable and manic, destroys a dehumanized and anonymous anthropomorphic form. Smerdyakov's psychology leads him to impulsive acts of violence. It leads him to manipulate the people around him so as to allow the death of Fyodor. Yet one can almost see a quiet terror in Saturn's eyes. A reaction belying that this violence is not formless. That it unnerves even the perpetrator. </p> 
       
       
