--- a/polzunkov.html
+++ b/polzunkov.html
@@ -2,7 +2,7 @@
 <html>
     <link href='dostoevsky.css' rel='stylesheet'>
   <head>
-        <a href="dostoevskyclass.html"> Homepage</a>
+        <a href="index.html"> Homepage</a>
       <a href="smerdyakov.html"> Smerdyakov</a>
     <title>Polzunkov</title>
   </head>
