--- a/smerdyakov.html
+++ b/smerdyakov.html
@@ -2,7 +2,7 @@
 <html>
     <link href='dostoevsky.css' rel='stylesheet'>
   <head>
-        <a href="dostoevskyclass.html"> Homepage</a>
+        <a href="index.html"> Homepage</a>
       <a href="polzunkov.html"> Polzunkov</a>
     <title>Smerdyakov</title>
   </head>
