--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       
       <p>I, the faithful intern that was tasked with creating this webpage, present Dostoevsky's mysterious work as it was found, with only minor embellishments, because I cannot read the Russian language, that script in which he wrote this manuscript. Thus, all work is derived from what I think the source text must be...</p>
     <div>
-      <a href="smerdyakov.html"><img src="goya_saturn.jpeg" alt="Smerdyakov"> Smerdyavov</a>
-      <a href="polzunkov.html"><img src="polzunkov_vangogh.jpeg" alt="Polzunkov"> Polzunkov</a>
+      <a href="smerdyakov.html"><img src="goya_saturn.jpeg" alt="Smerdyakov" width="300" height="400"> Smerdyavov</a>
+      <a href="polzunkov.html"><img src="polzunkov_vangogh.jpeg" alt="Polzunkov" width="400" height="300"> Polzunkov</a>
         
         <p style= "text-align: center">Sources cited:</p>    
         <p> Dostoevsky, Fyodor. <i> Polzunkov. </i> Poor Folk and Other Stories. Penguin Classic, 1988. </p>
