--- a/polzunkov.html
+++ b/polzunkov.html
@@ -8,9 +8,10 @@
   </head>
   <body>
     <h1 style= "color: #ff0000">POLZUNKOV.</h1>
+      <div class="image-container">>
       <img src="polzunkov_vangogh.jpeg" alt="Polzunkov">
       <p style= "text-align: right">Polzunkov is depicted here as Van Gogh's <i> Peasant Burning Weeds</i>. Where the image shows a man toiling alone on a hellish plain, Polzunkov is a man whose great travail in life is taken in the most abject solitude. To entertain and to be misunderstood. To even be hated by the narrator of his own story. </p> 
-      
+      </div>
       <h2 style= "color: #ff0000"> “In short, he was a martyr in the full sense of the term, but a martyr who was utterly useless and therefore utterly comic” (253 Polzunkov). </h2>
       
 
