--- a/polzunkov.html
+++ b/polzunkov.html
@@ -8,15 +8,15 @@
   </head>
   <body>
     <h1 style= "color: #ff0000">POLZUNKOV.</h1>
-      <div class="image-container">>
-      <img src="polzunkov_vangogh.jpeg" alt="Polzunkov">
-      <p style= "text-align: right">Polzunkov is depicted here as Van Gogh's <i> Peasant Burning Weeds</i>. Where the image shows a man toiling alone on a hellish plain, Polzunkov is a man whose great travail in life is taken in the most abject solitude. To entertain and to be misunderstood. To even be hated by the narrator of his own story. </p> 
-      </div>
+    <div class="image-container">
+  <img src="polzunkov_vangogh.jpeg" alt="Polzunkov" style="float: left; margin-right: 10px;">
+  <p style="margin-left: 10px; text-align: left;">Polzunkov is depicted here as Van Gogh's <i>Peasant Burning Weeds</i>. Where the image shows a man toiling alone on a hellish plain, Polzunkov is a man whose great travail in life is taken in the most abject solitude. To entertain and to be misunderstood. To even be hated by the narrator of his own story.</p>
+</div>
       <h2 style= "color: #ff0000"> “In short, he was a martyr in the full sense of the term, but a martyr who was utterly useless and therefore utterly comic” (253 Polzunkov). </h2>
       
 
 
-<p>The Buffoon. Polzunkov was perhaps the bastard child of an old Prussian. “That old retired junker, though, he would not allow me into his house...had also, <b>perhaps not mistakenly, treated me like his own son</b>” (257 Polzunkov). In this way, you can see how his buffoonery may come from the same place. Some kind of identity-void that curses children in these positions, that pushed Smerdyakov to villainy, and Polzunkov to prosper by sheer humiliation. </p>
+      <p> <b style= "color: #ff0000> The Buffoon</b>. Polzunkov was perhaps the bastard child of an old Prussian. “That old retired junker, though, he would not allow me into his house...had also, <b>perhaps not mistakenly, treated me like his own son</b>” (257 Polzunkov). In this way, you can see how his buffoonery may come from the same place. Some kind of identity-void that curses children in these positions, that pushed Smerdyakov to villainy, and Polzunkov to prosper by sheer humiliation. </p>
 
 <p>What we understand of Polzunkov’s life is unclear. Perhaps it will be made clear by this project. The narrator of his story does not respect him. He affords little detail to his upbringing, and even less to his real humanity. What we get from his narrator is a horror of humiliation and buffoonery. </p>
 
