--- a/polzunkov.html
+++ b/polzunkov.html
@@ -16,7 +16,7 @@
       
 
 
-      <p> <b style= "color: #ff0000> The Buffoon</b>. Polzunkov was perhaps the bastard child of an old Prussian. “That old retired junker, though, he would not allow me into his house...had also, <b>perhaps not mistakenly, treated me like his own son</b>” (257 Polzunkov). In this way, you can see how his buffoonery may come from the same place. Some kind of identity-void that curses children in these positions, that pushed Smerdyakov to villainy, and Polzunkov to prosper by sheer humiliation. </p>
+      <p> <b style= "color: #ff0000"> The Buffoon</b>. Polzunkov was perhaps the bastard child of an old Prussian. “That old retired junker, though, he would not allow me into his house...had also, <b>perhaps not mistakenly, treated me like his own son</b>” (257 Polzunkov). In this way, you can see how his buffoonery may come from the same place. Some kind of identity-void that curses children in these positions, that pushed Smerdyakov to villainy, and Polzunkov to prosper by sheer humiliation. </p>
 
 <p>What we understand of Polzunkov’s life is unclear. Perhaps it will be made clear by this project. The narrator of his story does not respect him. He affords little detail to his upbringing, and even less to his real humanity. What we get from his narrator is a horror of humiliation and buffoonery. </p>
 
@@ -30,7 +30,7 @@
 
 <p>But because of his familiarity with abuse and humiliation, he wasn’t afraid to debase himself for the benefit of the crowd: “The spectacle of a rather well-dressed gentleman jumping on a chair and shouting at the top of his voice had indeed aroused general attention” (253 Polzunkov).</p>
 
-<p>It is this that draws attention to Polzunkov’s humanity. He screams for attention, for love, for respect. He loves his fellow man so much that he will use any joke to make them happy. Although his own identity is subservient to the people around him, he curates a new identity, and even a certain power, through performance. As the buffoon, he is impelled to humiliate himself.</p>
+<p style= "color: #ff0000">It is this that draws attention to Polzunkov’s humanity. He screams for attention, for love, for respect. He loves his fellow man so much that he will use any joke to make them happy. Although his own identity is subservient to the people around him, he curates a new identity, and even a certain power, through performance. As the buffoon, he is impelled to humiliate himself.</p>
       
               <p style= "text-align: center">Sources cited:</p>    
         <p> Dostoevsky, Fyodor. <i> Polzunkov. </i> Poor Folk and Other Stories. Penguin Classic, 1988. </p>
