--- a/smerdyakov.html
+++ b/smerdyakov.html
@@ -9,8 +9,8 @@
   <body>
     <h1 style= "color: #ff0000">SMERDYAKOV.</h1>
       <div class="image-container">
-      <img src="goya_saturn.jpeg" alt="Smerdyakov">
-      <p style= "text-align: right"> Smerdyakov is presented as Goya's <i> Saturn Devouring his Son. </i> This highly disturbing image is hard to look at directly. In this way, Smerdyakov's own humanity is disgusting to the Karamazovs around him, and often to the reader. The Saturn-figure, driven by lust or hunger or hatred, insatiable and manic, destroys a dehumanized and anonymous anthropomorphic form. Smerdyakov's psychology leads him to impulsive acts of violence. It leads him to manipulate the people around him so as to allow the death of Fyodor. Yet one can almost see a quiet terror in Saturn's eyes. A reaction belying that this violence is not formless. That it unnerves even the perpetrator. </p> 
+      <img src="goya_saturn.jpeg" alt="Smerdyakov" style="float: left; margin-right: 10px;">
+      <p style="margin-left: 10px; text-align: left;"> Smerdyakov is presented as Goya's <i> Saturn Devouring his Son. </i> This highly disturbing image is hard to look at directly. In this way, Smerdyakov's own humanity is disgusting to the Karamazovs around him, and often to the reader. The Saturn-figure, driven by lust or hunger or hatred, insatiable and manic, destroys a dehumanized and anonymous anthropomorphic form. Smerdyakov's psychology leads him to impulsive acts of violence. It leads him to manipulate the people around him so as to allow the death of Fyodor. Yet one can almost see a quiet terror in Saturn's eyes. A reaction belying that this violence is not formless. That it unnerves even the perpetrator. </p> 
      </div>
       <h2 style= "color: #ff0000">“As a child he was fond of hanging cats and then burying them with ceremony. He would put on a sheet, which served as a vestment, chant, and swing something the dead cat as if it were a censer. It was all done on the sly, in great secrecy” (132, Brothers Karamazov).</h2>
    
