--- a/smerdyakov.html
+++ b/smerdyakov.html
@@ -14,7 +14,7 @@
      </div>
       <h2 style= "color: #ff0000">“As a child he was fond of hanging cats and then burying them with ceremony. He would put on a sheet, which served as a vestment, chant, and swing something the dead cat as if it were a censer. It was all done on the sly, in great secrecy” (132, Brothers Karamazov).</h2>
    
-    <p> <b>The anti-buffoon. </b> Smerdyakov, possessing an ego that sought to transgress his meager position and to prove his superiority to the insane posse of nobility that was kept unequal to, by irking those around them. He developed and wielded an uncanny ability to this end: </br>
+    <p> <b style= "color: #ff0000">The anti-buffoon. </b> Smerdyakov, possessing an ego that sought to transgress his meager position and to prove his superiority to the insane posse of nobility that was kept unequal to, by irking those around them. He developed and wielded an uncanny ability to this end: </br>
 “Grigory was dumbfounded and stared goggle-eyed at the orator. Though he did not understand very well what was being said, he did suddenly understand some of all this gibberish, and stood looking like a man who had just run his head into a wall” (138, Brothers Karamazov). </p>
 
 <p> A bastard child, his mother, a holy fool, was presumed raped by the sensualist, Fyodor Pavlovich (105, Brothers Karamazov), who would nonetheless patronize him as a chef, and take such a liking to him as to prevent his adopted father from mercilessly beating him, (134, Brothers Karamazov).  </p>
@@ -27,7 +27,7 @@
 
 <p>They spoke of many things. But, “Ivan Fyodorovich soon realized that the sun, moon, and stars were not the point at all, that while the sun, moon, and stars might be an interesting subject, for Smerdyakov it was of completely third-rate importance, and that he was after something quite different (283, Brothers Karamazov). Rather, the importance was to desperately prove, to Ivan, and to himself, that they were equals. That of the four issues of Fyodor, Ivan and Smerdyakov, both 24, were the same. That they were both superior to the whole rest of the raving, goggle-eyed, drooling Karamazov mob.  </p>
 
-<p> In this way, you can understand Smerdyakov’s comment to Ivan, just before Ivan leaves. “So it’s true what they say, that it’s always interesting to talk with an intelligent man,’ Smerdyakov replied firmly, giving Ivan Fyodorvich a penetrating look” (297, Brothers Karamazov).  </p>
+<p> In this way, you can understand Smerdyakov’s comment to Ivan, just before Ivan leaves. <b style= "color: #ff0000">“So it’s true what they say, that it’s always interesting to talk with an intelligent man,’</b> Smerdyakov replied firmly, giving Ivan Fyodorvich a penetrating look” (297, Brothers Karamazov).  </p>
 
 
         <p style= "text-align: center">Sources cited:</p>    
