--- a/polzunkov.html
+++ b/polzunkov.html
@@ -16,7 +16,7 @@
       
 
 
-      <p> <b style= "color: #ff0000"> The Buffoon</b>. Polzunkov was perhaps the bastard child of an old Prussian. “That old retired junker, though, he would not allow me into his house...had also, <b>perhaps not mistakenly, treated me like his own son</b>” (257 Polzunkov). In this way, you can see how his buffoonery may come from the same place. Some kind of identity-void that curses children in these positions, that pushed Smerdyakov to villainy, and Polzunkov to prosper by sheer humiliation. </p>
+      <p> <b style= "color: #ff0000"> The Buffoon</b>. Polzunkov might have been the bastard child of an old Prussian. “That old retired junker, though, he would not allow me into his house...had also, <b>perhaps not mistakenly, treated me like his own son</b>” (257 Polzunkov). In this way, you can see how his buffoonery may come from the same place. Some kind of identity-void that curses children in these positions, that pushed Smerdyakov to villainy, and Polzunkov to prosper by sheer humiliation. </p>
 
 <p>What we understand of Polzunkov’s life is unclear. Perhaps it will be made clear by this project. The narrator of his story does not respect him. He affords little detail to his upbringing, and even less to his real humanity. What we get from his narrator is a horror of humiliation and buffoonery. </p>
 
