--- a/smerdyakov.html
+++ b/smerdyakov.html
@@ -12,7 +12,7 @@
       <img src="goya_saturn.jpeg" alt="Smerdyakov" style="float: left; margin-right: 10px;">
       <p style="margin-left: 10px; text-align: left;"> Smerdyakov is presented as Goya's <i> Saturn Devouring his Son. </i> This highly disturbing image is hard to look at directly. In this way, Smerdyakov's own humanity is disgusting to the Karamazovs around him, and often to the reader. The Saturn-figure, driven by lust or hunger or hatred, insatiable and manic, destroys a dehumanized and anonymous anthropomorphic form. Smerdyakov's psychology leads him to impulsive acts of violence. It leads him to manipulate the people around him so as to allow the death of Fyodor. Yet one can almost see a quiet terror in Saturn's eyes. A reaction belying that this violence is not formless. That it unnerves even the perpetrator. </p> 
      </div>
-      <h2 style= "color: #ff0000">“As a child he was fond of hanging cats and then burying them with ceremony. He would put on a sheet, which served as a vestment, chant, and swing something the dead cat as if it were a censer. It was all done on the sly, in great secrecy” (132, Brothers Karamazov).</h2>
+      <h2 style="margin-top: 20px;" style= "color: #ff0000">“As a child he was fond of hanging cats and then burying them with ceremony. He would put on a sheet, which served as a vestment, chant, and swing something the dead cat as if it were a censer. It was all done on the sly, in great secrecy” (132, Brothers Karamazov).</h2>
    
     <p> <b style= "color: #ff0000">The anti-buffoon. </b> Smerdyakov, possessing an ego that sought to transgress his meager position and to prove his superiority to the insane posse of nobility that was kept unequal to, by irking those around them. He developed and wielded an uncanny ability to this end: </br>
 “Grigory was dumbfounded and stared goggle-eyed at the orator. Though he did not understand very well what was being said, he did suddenly understand some of all this gibberish, and stood looking like a man who had just run his head into a wall” (138, Brothers Karamazov). </p>
@@ -30,7 +30,7 @@
 <p> In this way, you can understand Smerdyakov’s comment to Ivan, just before Ivan leaves. <b style= "color: #ff0000">“So it’s true what they say, that it’s always interesting to talk with an intelligent man,’</b> Smerdyakov replied firmly, giving Ivan Fyodorvich a penetrating look” (297, Brothers Karamazov).  </p>
 
 
-        <p style= "text-align: center">Sources cited:</p>    
+        <p style="margin-top: 20px;" style= "text-align: center">Sources cited:</p>    
         <p> Dostoevsky, Fyodor. <i> Polzunkov. </i> Poor Folk and Other Stories. Penguin Classic, 1988. </p>
         <p> Dostoevsky, Fyodor. <i> Brothers Karamazov </i> Picador, 1990. </p>
        <p> de Goya, Francisco. <i> Saturn Devouring his Son </i> https://en.wikipedia.org/wiki/Black_Paintings#/media/File:Francisco_de_Goya,_Saturno_devorando_a_su_hijo_(1819-1823).jpg </p>
