--- a/polzunkov.html
+++ b/polzunkov.html
@@ -12,7 +12,7 @@
   <img src="polzunkov_vangogh.jpeg" alt="Polzunkov" style="float: left; margin-right: 10px;">
   <p style="margin-left: 10px; text-align: left;">Polzunkov is depicted here as Van Gogh's <i>Peasant Burning Weeds</i>. Where the image shows a man toiling alone on a hellish plain, Polzunkov is a man whose great travail in life is taken in the most abject solitude. To entertain and to be misunderstood. To even be hated by the narrator of his own story.</p>
 </div>
-      <h2 style="margin-top: 20px;" style= "color: #ff0000"> “In short, he was a martyr in the full sense of the term, but a martyr who was utterly useless and therefore utterly comic” (253 Polzunkov). </h2>
+      <h2 style="margin-top: 20px; color: #ff0000"> “In short, he was a martyr in the full sense of the term, but a martyr who was utterly useless and therefore utterly comic” (253 Polzunkov). </h2>
       
 
 
@@ -32,7 +32,7 @@
 
 <p style= "color: #ff0000">It is this that draws attention to Polzunkov’s humanity. He screams for attention, for love, for respect. He loves his fellow man so much that he will use any joke to make them happy. Although his own identity is subservient to the people around him, he curates a new identity, and even a certain power, through performance. As the buffoon, he is impelled to humiliate himself.</p>
       
-              <p style="margin-top: 20px;" style= "text-align: center">Sources cited:</p>    
+              <p style="margin-top: 20px; text-align: center">Sources cited:</p>    
         <p> Dostoevsky, Fyodor. <i> Polzunkov. </i> Poor Folk and Other Stories. Penguin Classic, 1988. </p>
         <p> Dostoevsky, Fyodor. <i> Brothers Karamazov </i> Picador, 1990. </p>
              <p> de Goya, Francisco. <i> Saturn Devouring his Son </i> https://en.wikipedia.org/wiki/Black_Paintings#/media/File:Francisco_de_Goya,_Saturno_devorando_a_su_hijo_(1819-1823).jpg </p>
