--- a/polzunkov.html
+++ b/polzunkov.html
@@ -30,7 +30,7 @@
 
 <p>But because of his familiarity with abuse and humiliation, he wasn’t afraid to debase himself for the benefit of the crowd: “The spectacle of a rather well-dressed gentleman jumping on a chair and shouting at the top of his voice had indeed aroused general attention” (253 Polzunkov).</p>
 
-<p style= "color: #ff0000">It is this that draws attention to Polzunkov’s humanity. He screams for attention, for love, for respect. He loves his fellow man so much that he will use any joke to make them happy. Although his own identity is subservient to the people around him, he curates a new identity, and even a certain power, through performance. As the buffoon, he is impelled to humiliate himself.</p>
+<p style= "color: #ff0000"> <b>It is this that draws attention to Polzunkov’s humanity. He screams for attention, for love, for respect. He loves his fellow man so much that he will use any joke to make them happy. Although his own identity is subservient to the people around him, he curates a new identity, and even a certain power, through performance. As the buffoon, he is impelled to humiliate himself. </b> </p>
       
               <p style="margin-top: 20px; text-align: center">Sources cited:</p>    
         <p> Dostoevsky, Fyodor. <i> Polzunkov. </i> Poor Folk and Other Stories. Penguin Classic, 1988. </p>
