--- a/polzunkov.html
+++ b/polzunkov.html
@@ -10,7 +10,7 @@
     <h1 style= "color: #ff0000">POLZUNKOV.</h1>
     <div class="image-container">
   <img src="polzunkov_vangogh.jpeg" alt="Polzunkov" style="float: left; margin-right: 10px;">
-  <p style="margin-left: 10px; text-align: left;">Polzunkov is depicted here as Van Gogh's <i>Peasant Burning Weeds</i>. Where the image shows a man toiling alone on a hellish plain, Polzunkov is a man whose great travail in life is taken in the most abject solitude. To entertain and to be misunderstood. To even be hated by the narrator of his own story.</p>
+  <p style="margin-left: 10px; text-align: left;">Polzunkov is depicted here as Van Gogh's <i>Peasant Burning Weeds</i>. Where the image shows a man toiling alone on a hellish plain, Polzunkov is a man whose great travail in life is taken in the most abject solitude. To entertain and to be misunderstood. To even be hated by the narrator of his own story. His own pitiful voice echoing back to him as the scornful laughter of his friends. </p>
 </div>
       <h2 style="margin-top: 20px; color: #ff0000"> “In short, he was a martyr in the full sense of the term, but a martyr who was utterly useless and therefore utterly comic” (253 Polzunkov). </h2>
       
